<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2018 Francesco Tonini <francescoantoniotonini@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">Beacon Service</string>

    <string name="start_service">Avvia servizio in background</string>
    <string name="end_service">Termina servizio in background</string>
    <string name="export_data">Esporta dati</string>
    <string name="clean_data">Cancella dati</string>
    <string name="switch_autosave">Salvataggio automatico periodico</string>

    <string name="beacon_service_notification_title">Analisi beacon attiva</string>
    <string name="beacon_service_notification_message">%d beacon trovati</string>
    <string name="beacon_service_notification_title_error">Analisi beacon arrestata</string>
    <string name="beacon_service_notification_message_error">Si è verificato un errore non previsto</string>

    <string name="wifi_service_notification_title">Analisi wifi attiva</string>
    <string name="wifi_service_notification_message">%d wifi trovati</string>
    <string name="wifi_service_notification_title_error">Analisi wifi arrestata</string>
    <string name="wifi_service_notification_message_error">Si è verificato un errore non previsto</string>
</resources>
